# transpeer

./: .gitignore  HANDOFF.md  PROTOCOL.md  pyproject.toml
TODO/: bash_daemon_for_scale.md
equix/: build.py
sim/: attacker.py  flooder.py  gen_attacker_sim.py  gen_scale_test.py  gen_shadow_config.py  shadow.yaml  shadow_attacker.yaml  shadow_crossnet.yaml  test_equix.py  test_equix_shadow.yaml
sim/daemons/: fake_daemon.py
sim/shadow.data/: processed-config.yaml  sim-stats.json
sim/shadow.data/hosts/node1/: python3.12.1000.stderr  python3.12.1001.stderr
sim/shadow.data/hosts/node10/: python3.12.1000.stderr  python3.12.1001.stderr
sim/shadow.data/hosts/node11/: python3.12.1000.stderr  python3.12.1001.stderr
sim/shadow.data/hosts/node12/: python3.12.1001.stderr
sim/shadow.data/hosts/node13/: python3.12.1001.stderr
sim/shadow.data/hosts/node14/: python3.12.1000.stderr  python3.12.1001.stderr
sim/shadow.data/hosts/node15/: python3.12.1000.stderr  python3.12.1001.stderr
sim/shadow.data/hosts/node2/: python3.12.1001.stderr
sim/shadow.data/hosts/node3/: python3.12.1000.stderr  python3.12.1001.stderr
sim/shadow.data/hosts/node4/: python3.12.1000.stderr  (+1 more)
sim/tests/: README.md
sim/tests/attacker_ratio/: results.txt  run_experiment.sh
sim/tests/handshake_pow/: gen_config.py  results.txt  run_experiment.sh
tests/: test_two_nodes.py
transpeer/: __init__.py  __main__.py  client.py  config.py  node.py  peerstore.py  pow.py  scanner.py  server.py  verifier.py
transpeer/networks/: __init__.py  aeon.py  base.py  generic.py  monero.py  wownero.py
(+14 files in other folders)
